fix(a11y): various issues with contrast ratios (#635)
Fixes #398. Reverts #399.

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/_component-sidenav-theme.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/_component-sidenav-theme.scss
@@ -35,7 +35,7 @@
 
       &.docs-component-viewer-sidenav-item-selected,
       &:hover {
-        color: mat-color($primary);
+        color: mat-color($primary, if($is-dark-theme, 200, default));
       }
     }
   }
