--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/highlightjs/material-dark.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/highlightjs/material-dark.scss
@@ -18,7 +18,7 @@ Orginal Style from https://github.com/Kelbster/highlightjs-material-dark-theme  
 }
 
 .hljs-comment {
-  color: #656565;
+  color: #9E9E9E;
   font-style: italic;
 }
 
